tests/predator-regre/test-0009.err
test-0009.c:6:12: warning: memory leak detected while destroying a variable on stack
test-0009.c:9:11: warning: memory leak detected while destroying a variable on stack
test-0009.c:14:20: note: writing heap graph to 'test-0009.c-14-0000.dot'...
test-0009.c:15:10: error: dereferencing object of size 4B out of bounds
test-0009.c:15:10: note: the target object ends 3B beyond a heap object of size 1B
